<resources>
    <string name="app_name">Campus Recruitment System</string>
    <string name="admin_signup_btn_text">ADMIN SIGN IN</string>
    <string name="company_signup_btn_text">COMPANY SIGNUP / SIGN IN</string>
    <string name="student_signup_btn_text">STUDENT SIGNUP / SIGN IN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailEditTextHint">Email Address</string>
    <string name="passwordEditTextHint">Password</string>
    <string name="signInBtnText">SIGN IN</string>
    <string name="signInHeadingText">SIGN IN</string>
    <string name="signUpHeadingText">SIGN UP</string>
    <string name="confirmPasswordEditTextHint">Confirm Password</string>
    <string name="genderMaleText">Male</string>
    <string name="genderFemaleText">Female</string>
    <string name="signUpBtnText">SIGN UP</string>
    <string name="genderSelectText">Select Gender</string>
    <string name="companyNameEditTextHint">Company Name</string>
    <string name="dobEditTextHint">Date Of Birth</string>
    <string name="percentageEditTextHint">Percentage / GPA</string>
    <string name="title_activity_admin_dashboard">Admin Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="companiesListHeading">COMPANIES</string>
    <string name="studentsListHeading">STUDENTS</string>
    <string name="nameEditTextHint">Name</string>
    <string name="firebaseAdminNode">admins</string>
    <string name="firebaseCompaniesNode">companies</string>
    <string name="firebaseStudentsNode">students</string>
    <string name="userSahredPrefKey">USER_INFO</string>
    <string name="userSahredPrefUserType">user_type</string>
    <string name="studentIdEditTextHint">Student ID</string>
</resources>
