<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="marathon.project0.campusrecruitmentsystem.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/headingLargeTextSize"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/adminSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_signup_btn_text"
            />

        <Button
            android:id="@+id/companySignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_signup_btn_text"
            />

        <Button
            android:id="@+id/studentSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_signup_btn_text"
            />

    </LinearLayout>

</FrameLayout>
